<resources>
    <string name="app_name">学习之旅</string>
    <string name="motion_nav_name1">基本运动</string>
    <string name="motion_nav_name2">自定义属性 - backgroundColor</string>
    <string name="motion_nav_name3">ImageFilterView - 图片转换</string>
    <string name="motion_nav_name4">关键帧位置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="customize_nav_name1">文字绘制</string>
    <string name="customize_nav_name2">仪表盘</string>
    <string name="customize_nav_name3">饼图</string>
    <string name="customize_nav_name4">Xfermode的使用</string>
    <string name="customize_nav_name5">MaterialEditText</string>

    <string name="winner">赢</string>

    <string name="coroutine_string">开始(%s件商品)</string>

    <string name="coordinator_nav_name1">自定义Behavior</string>
    <string name="coordinator_nav_name2">RecyclerView上滑标题栏缩小</string>
    <string name="coordinator_nav_name3">NestedScrollView上滑标题栏缩小</string>
    <string name="coordinator_nav_name4">悬浮栏(第一种方式)</string>
    <string name="coordinator_nav_name5">悬浮栏(第二种方式)</string>

</resources>